2007-11-30  Johan Dahlin  <johan@gnome.org>

	* data/glade/wizard_encoding.glade: 
	* flumotion/wizard/conversionsteps.py (ConversiontStep): 
	Remove get_state() and widget naming prefix. Rename signals.

	* data/glade/wizard_shout2.glade: 
	* flumotion/wizard/consumptionsteps.py (Shout2Step): 
	Remove get_state() and widget naming prefix. Rename signals.

	* data/glade/wizard_consumption.glade: 
	* flumotion/wizard/consumptionsteps.py (ConsumptionStep): 
	Remove get_state() and widget naming prefix. Rename signals.

	* data/glade/wizard_source.glade: 
	* flumotion/wizard/productionsteps.py (ProductionStep): 
	Remove get_state() and widget naming prefix. Rename signals.

	* data/glade/wizard_license.glade:
	* flumotion/wizard/configurationwizard.py:
	(LicenseStep): remove widget naming prefix, the name of the widget
	is the state name

	* flumotion/ui/wizard.py (WizardStep.get_state): 
	reimplement using proxy widget state.

	* flumotion/ui/fgtk.py (ProxyWidgetMapping): Add
	radio and entry.

	* flumotion/wizard/conversionsteps.py (JPEGStep.get_state): 
	_fraction_from_float, fix typo

	* flumotion/ui/wizard.py (WizardStep): use ProxyWidgetMapping here
	and remove it on all known subclasses.
	* flumotion/wizard/configurationwizard.py
	(LicenseStep): use ProxyWidgetMapping

	* flumotion/wizard/basesteps.py:
	* flumotion/wizard/conversionsteps.py:
	(JPEGStep.get_state): 
	Move over the consumption steps to ProxyWidgetMapping

	* flumotion/wizard/conversionsteps.py (ConversionStep): 
	Use ProxyWidgetMapping, refactor/simplify video/audio page
	(ConversionStep._get_video_page): Yay for pychecker

2007-11-29  Andy Wingo  <wingo@pobox.com>

	* flumotion/component/combiners/switch/switch.py (withlock): New
	helper.
	(Switch.init, Switch._create_scheduler): Change idealEater to
	_switchingToFeed, protected by the switch lock. The switch lock
	just protects data, not code.
	(Switch.create_pipeline, SingleSwitch.get_logical_feeds)