@@ -40,7 +40,7 @@
 	  <property name="yalign">0.5</property>
 	  <property name="xpad">0</property>
 	  <property name="ypad">0</property>
-	  <property name="mnemonic_widget">spinbutton_qmin</property>
+	  <property name="mnemonic_widget">qmin</property>
 	  <property name="ellipsize">PANGO_ELLIPSIZE_NONE</property>
 	  <property name="width_chars">-1</property>
 	  <property name="single_line_mode">False</property>
@@ -69,7 +69,7 @@
 	  <property name="yalign">0.5</property>
 	  <property name="xpad">0</property>
 	  <property name="ypad">0</property>
-	  <property name="mnemonic_widget">spinbutton_qmax</property>
+	  <property name="mnemonic_widget">qmax</property>
 	  <property name="ellipsize">PANGO_ELLIPSIZE_NONE</property>
 	  <property name="width_chars">-1</property>
 	  <property name="single_line_mode">False</property>
@@ -98,7 +98,7 @@
 	  <property name="yalign">0.5</property>
 	  <property name="xpad">0</property>
 	  <property name="ypad">0</property>
-	  <property name="mnemonic_widget">spinbutton_threshold</property>
+	  <property name="mnemonic_widget">threshold</property>
 	  <property name="ellipsize">PANGO_ELLIPSIZE_NONE</property>
 	  <property name="width_chars">-1</property>
 	  <property name="single_line_mode">False</property>
@@ -127,7 +127,7 @@
 	  <property name="yalign">0.5</property>
 	  <property name="xpad">0</property>
 	  <property name="ypad">0</property>
-	  <property name="mnemonic_widget">spinbutton_keyframe</property>
+	  <property name="mnemonic_widget">keyframe</property>
 	  <property name="ellipsize">PANGO_ELLIPSIZE_NONE</property>
 	  <property name="width_chars">-1</property>
 	  <property name="single_line_mode">False</property>
@@ -144,7 +144,7 @@
       </child>
 
       <child>
-	<widget class="GtkSpinButton" id="spinbutton_qmin">
+	<widget class="GtkSpinButton" id="qmin">
 	  <property name="visible">True</property>
 	  <property name="can_focus">True</property>
 	  <property name="climb_rate">1</property>
@@ -166,7 +166,7 @@
       </child>
 
       <child>
-	<widget class="GtkSpinButton" id="spinbutton_qmax">
+	<widget class="GtkSpinButton" id="qmax">
 	  <property name="visible">True</property>
 	  <property name="can_focus">True</property>
 	  <property name="climb_rate">1</property>
@@ -188,7 +188,7 @@
       </child>
 
       <child>
-	<widget class="GtkSpinButton" id="spinbutton_threshold">
+	<widget class="GtkSpinButton" id="threshold">
 	  <property name="width_request">75</property>
 	  <property name="visible">True</property>
 	  <property name="can_focus">True</property>
@@ -211,7 +211,7 @@
       </child>
 
       <child>
-	<widget class="GtkSpinButton" id="spinbutton_keyframe">
+	<widget class="GtkSpinButton" id="keyframe">
 	  <property name="visible">True</property>
 	  <property name="can_focus">True</property>
 	  <property name="climb_rate">1</property>
